# poc-kafka-messaging

./: Cargo.toml  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml
src/: app.module.ts  main.rs
src/config/: mod.rs
src/messages/: messages.controller.ts
src/messaging/: messages_controller.rs  messages_service.rs  mod.rs
src/recorder/: mod.rs
src/repositories/: mod.rs
src/repositories/messages_repo/: mod.rs  model.rs
src/routes/: mod.rs
src/server/: mod.rs
src/services/: kafka_client.rs  mod.rs  mongodb_client.rs
src/services/kafka_client/: mod.rs
