[package]
name = "poc-kafka"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = "0.7.9"

axum-extra =  { version = "0.9.6", features = ["typed-header"] }
futures = "0.3.31"

kafka = "0.10.0"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
